# student_mgr

./: CMakeLists.txt  README.md
src/: Packet.h  util.h
src/buffer/: ByteBuffer.h
src/cli/: Menu.h  main.cpp
src/database/: Database.cpp  Database.h
src/manager/: main.cpp
src/student/: Student.cpp  Student.h
